[gd_scene load_steps=8 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://snake/background.png" type="Texture" id=2]
[ext_resource path="res://snake/border-box.png" type="Texture" id=3]
[ext_resource path="res://src/HTTPRequest2.gd" type="Script" id=4]
[ext_resource path="res://src/timer.gd" type="Script" id=14]
[ext_resource path="res://src/HTTPRequest.gd" type="Script" id=16]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 398.095, 390.476 )

[node name="main" type="Node"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 959, 538 )
scale = Vector2( 1.00312, 1.02037 )
texture = ExtResource( 2 )

[node name="Border-box" type="Sprite" parent="."]
position = Vector2( 697, 604 )
scale = Vector2( 1.05, 1.05 )
texture = ExtResource( 3 )

[node name="ReferenceRect" type="ReferenceRect" parent="Border-box"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -828.5
margin_top = -827.5
margin_right = -61.5
margin_bottom = -62.5
border_color = Color( 0.0431373, 0.0431373, 0.0431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="Border-box/ReferenceRect"]
position = Vector2( -22.8571, -6.66658 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border-box/ReferenceRect/Area2D"]
position = Vector2( 406.357, 392.024 )
shape = SubResource( 10 )

[node name="timer" type="Node" parent="."]
script = ExtResource( 14 )

[node name="Timer" type="Timer" parent="timer"]

[node name="HTTPRequest" type="HTTPRequest" parent="."]
pause_mode = 2
script = ExtResource( 16 )

[node name="HTTPRequest2" type="HTTPRequest" parent="."]
pause_mode = 2
script = ExtResource( 4 )

[connection signal="area_exited" from="Border-box/ReferenceRect/Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="timer/Timer" to="timer" method="_on_Timer_timeout"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="HTTPRequest2" to="." method="_on_HTTPRequest2_request_completed"]
